Start refactor for production and dev environments.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bedrock": "^1.2.4",
     "bedrock-express": "^2.0.4",
+    "bedrock-mongodb": "^3.0.0",
     "bedrock-requirejs": "^2.0.2",
     "bedrock-server": "^2.1.2",
     "bedrock-views": "^4.2.1",
