--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "private": true,
   "scripts": {
     "start": "node flex-ledger.digitalbazaar.com.js",
+    "test": "node dhs2016ledger.dev test",
     "postinstall": "bower install && node flex-ledger.digitalbazaar.com.js compile-less"
   },
   "dependencies": {
     "bedrock": "^1.2.4",
+    "bedrock-docs": "^2.0.1",
     "bedrock-express": "^2.0.4",
+    "bedrock-identity": "^4.2.2",
+    "bedrock-identity-rest": "^0.6.0",
+    "bedrock-key": "^3.1.2",
+    "bedrock-key-http": "^2.1.1",
+    "bedrock-mail": "^2.0.1",
     "bedrock-mongodb": "^3.0.0",
+    "bedrock-passport": "^3.1.2",
+    "bedrock-permission": "^2.3.2",
     "bedrock-requirejs": "^2.0.2",
+    "bedrock-rest": "^2.0.1",
     "bedrock-server": "^2.1.2",
+    "bedrock-validation": "^2.1.0",
     "bedrock-views": "^4.2.1",
     "bower": "^1.7.9"
   },
