--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "bedrock-views": "^4.2.1",
     "bower": "^1.7.9"
   },
+  "devDependencies": {
+    "jsonld": "^0.4.11",
+    "jsonld-signatures": "^1.1.5"
+  },
   "engines": {
     "node": ">=6.3.0"
   },
