--- a/package.json
+++ b/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "dhs2016ledger",
-  "version": "0.0.5",
-  "private": true,
-  "scripts": {
-    "start": "node dhs2016ledger.digitalbazaar.com.js",
-    "test": "node dhs2016ledger.dev test",
-    "postinstall": "bower install && node dhs2016ledger.dev.js compile-less"
+  "name": "bedrock-ledger",
+  "version": "0.2.0-0",
+  "description": "Bedrock ledger",
+  "main": "./lib",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/digitalbazaar/bedrock-ledger.git"
   },
-  "dependencies": {
+  "author": {
+    "name": "Digital Bazaar, Inc.",
+    "email": "support@digitalbazaar.com",
+    "url": "http://digitalbazaar.com"
+  },
+  "bugs": {
+    "url": "https://github.com/digitalbazaar/bedrock-ledger/issues"
+  },
+  "homepage": "https://github.com/digitalbazaar/bedrock-ledger",
+  "peerDependencies": {
     "bedrock": "^1.2.4",
-    "bedrock-docs": "^2.0.1",
-    "bedrock-express": "^2.0.4",
-    "bedrock-identity": "^4.2.2",
-    "bedrock-identity-http": "^1.0.0",
-    "bedrock-key": "^3.1.2",
-    "bedrock-key-http": "^2.1.1",
-    "bedrock-mail": "^2.0.1",
     "bedrock-mongodb": "^3.0.0",
-    "bedrock-passport": "^3.1.2",
     "bedrock-permission": "^2.3.2",
-    "bedrock-requirejs": "^2.0.2",
-    "bedrock-rest": "^2.0.1",
-    "bedrock-server": "^2.1.2",
-    "bedrock-validation": "^2.1.0",
-    "bedrock-views": "^4.2.1",
-    "bower": "^1.7.9"
-  },
-  "devDependencies": {
     "jsonld": "^0.4.11",
     "jsonld-signatures": "^1.1.5"
   },
   "engines": {
     "node": ">=6.3.0"
-  },
-  "directories": {},
-  "main": "dhs2016ledger.digitalbazaar.com.js"
+  }
 }
