--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-ledger",
-  "version": "0.3.2-dev",
+  "version": "0.3.2",
   "description": "Bedrock ledger",
   "main": "./lib",
   "repository": {
