Flesh out create API.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/digitalbazaar/bedrock-ledger",
   "dependencies": {
-    "async": "^2.4.0"
+    "async": "^2.4.0",
+    "uuid": "^3.0.1"
   },
   "peerDependencies": {
     "bedrock": "^1.2.4",
