Implement consensus work scheduler.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "peerDependencies": {
     "bedrock": "^1.2.4",
     "bedrock-mongodb": "^3.0.0",
-    "bedrock-permission": "^2.3.2"
+    "bedrock-permission": "^2.3.2",
+    "bedrock-jobs": "^2.0.3"
   },
   "engines": {
     "node": ">=6.3.0"
