--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/digitalbazaar/bedrock-ledger",
   "dependencies": {
     "async": "^2.4.0",
+    "ni-uri": "^1.1.3",
     "uuid": "^3.0.1"
   },
   "peerDependencies": {
