--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/digitalbazaar/bedrock-ledger-node",
   "dependencies": {
     "async": "^2.4.0",
+    "fast-json-patch": "^2.0.6",
+    "lodash": "^4.17.10",
     "ni-uri": "^1.1.3",
     "uuid": "^3.0.1"
   },
