--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "async": "^2.4.0",
     "fast-json-patch": "^2.0.6",
     "lodash": "^4.17.10",
+    "bedrock-ledger-context": "^1.1.1",
+    "bedrock-validation": "^2.4.0",
     "ni-uri": "^1.1.3",
     "uuid": "^3.0.1"
   },
