--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "async": "^2.4.0",
     "fast-json-patch": "^2.0.6",
     "lodash": "^4.17.10",
-    "ni-uri": "^1.1.3",
+    "multibase": "^0.4.0",
+    "multihashes": "^0.4.14",
     "uuid": "^3.0.1"
   },
   "peerDependencies": {
