--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   },
   "homepage": "https://github.com/digitalbazaar/bedrock-ledger-node",
   "dependencies": {
-    "bedrock-ledger-context": "^1.1.1",
-    "bedrock-validation": "^2.4.1",
     "fast-json-patch": "^2.0.6",
     "lodash": "^4.17.10",
     "multibase": "^0.4.0",
@@ -28,9 +26,11 @@
   "peerDependencies": {
     "bedrock": "^1.8.0",
     "bedrock-injector": "^1.0.0",
+    "bedrock-ledger-context": "^1.1.1",
     "bedrock-mongodb": "^5.0.0",
     "bedrock-permission": "^2.5.1",
-    "bedrock-jobs": "^2.0.3"
+    "bedrock-jobs": "^2.0.3",
+    "bedrock-validation": "^2.4.1"
   },
   "engines": {
     "node": ">=8.9.0"
