--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.10",
     "multibase": "^0.4.0",
     "multihashes": "^0.4.14",
+    "serialize-error": "^3.0.0",
     "uuid": "^3.0.1"
   },
   "peerDependencies": {
