--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-ledger-node",
-  "version": "6.0.1-0",
+  "version": "7.0.0",
   "description": "Bedrock ledger node",
   "main": "./lib",
   "repository": {
