--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "7.1.1-0",
   "description": "Bedrock ledger node",
   "main": "./lib",
+  "scripts": {
+    "lint": "eslint lib"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/digitalbazaar/bedrock-ledger-node.git"
@@ -35,5 +38,9 @@
   },
   "engines": {
     "node": ">=8.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-digitalbazaar": "^1.5.0"
   }
 }
