--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": {
     "name": "Digital Bazaar, Inc.",
     "email": "support@digitalbazaar.com",
-    "url": "http://digitalbazaar.com"
+    "url": "https://digitalbazaar.com"
   },
   "bugs": {
     "url": "https://github.com/digitalbazaar/bedrock-ledger-node/issues"
@@ -40,7 +40,7 @@
     "node": ">=8.9.0"
   },
   "devDependencies": {
-    "eslint": "^5.13.0",
-    "eslint-config-digitalbazaar": "^1.5.0"
+    "eslint": "^6.5.1",
+    "eslint-config-digitalbazaar": "^2.0.1"
   }
 }
