--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-ledger-node",
-  "version": "8.0.4-0",
+  "version": "9.0.0",
   "description": "Bedrock ledger node",
   "main": "./lib",
   "scripts": {
