--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fast-json-patch": "^2.0.6",
     "jsonld": "^1.8.0",
     "lodash": "^4.17.10",
+    "lru-cache": "^5.1.1",
     "multibase": "^0.6.0",
     "multihashes": "^0.4.14",
     "serialize-error": "^3.0.0"
