--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "bedrock-injector": "^1.0.0",
     "bedrock-jsonld-document-loader": "^1.0.0",
     "bedrock-ledger-context": "^15.0.0",
-    "bedrock-mongodb": "5.5.0 - 6",
-    "bedrock-permission": "^2.5.1",
+    "bedrock-mongodb": "^7.0.0",
+    "bedrock-permission": "^3.0.0",
     "bedrock-validation": "^4.1.0"
   },
   "engines": {
