--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "bedrock-jobs": "^3.0.0",
     "bedrock-jsonld-document-loader": "^1.0.0",
     "bedrock-ledger-context": "^15.0.0",
-    "bedrock-mongodb": "7.x-8.x",
+    "bedrock-mongodb": "7.x - 8.x",
     "bedrock-permission": "^3.0.0",
     "bedrock-validation": "^4.1.0"
   },
