--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/digitalbazaar/bedrock-ledger-node",
   "dependencies": {
-    "@digitalbazaar/lru-memoize": "digitalbazaar/lru-memoize#delete-api",
+    "@digitalbazaar/lru-memoize": "^1.1.0",
     "fast-json-patch": "^2.0.6",
     "jsonld": "^2.0.1",
     "lodash": "^4.17.10",
