--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./lib",
   "scripts": {
-    "lint": "eslint lib"
+    "lint": "eslint lib test/mocha"
   },
   "repository": {
     "type": "git",
@@ -40,7 +40,7 @@
     "bedrock-validation": "^4.1.0"
   },
   "engines": {
-    "node": ">=8.9.0"
+    "node": ">=12"
   },
   "devDependencies": {
     "eslint": "^7.13.0",
