Remove update in `CHANGELOG.md`.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
   test-node:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    needs: [lint]
     services:
       mongodb:
         image: mongo:4.2
@@ -72,4 +73,3 @@ jobs:
       with:
         file: ./test/coverage/lcov.info
         fail_ci_if_error: true
-
