--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./lib",
   "scripts": {
-    "lint": "eslint lib test/mocha"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
