--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "bedrock-mongodb": "^8.1.0",
     "bedrock-permission": "^3.0.0",
     "bedrock-validation": "^5.1.0",
-    "ed25519-signature-2020-context": "^1.1.0",
+    "ed25519-signature-2020-context": "^1.1.0"
   },
   "engines": {
     "node": ">=12"
