Temp node test failure check.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
   test-node:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs: [lint]
+    #needs: [lint]
     services:
       mongodb:
         image: mongo:4.2
@@ -14,7 +14,8 @@ jobs:
           - 27017:27017
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        #node-version: [12.x, 14.x]
+        node-version: [14.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -32,48 +33,48 @@ jobs:
       run: |
         cd test
         npm test
-  lint:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    strategy:
-      matrix:
-        node-version: [14.x]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - name: Run eslint
-      run: npm run lint
-  coverage:
-    needs: [test-node]
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    services:
-      mongodb:
-        image: mongo:4.2
-        ports:
-          - 27017:27017
-    strategy:
-      matrix:
-        node-version: [14.x]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: |
-        cd test
-        npm install
-    - name: Generate coverage report
-      run: |
-        cd test
-        npm run coverage-ci
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        file: ./test/coverage/lcov.info
-        fail_ci_if_error: true
+#  lint:
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 10
+#    strategy:
+#      matrix:
+#        node-version: [14.x]
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Use Node.js ${{ matrix.node-version }}
+#      uses: actions/setup-node@v1
+#      with:
+#        node-version: ${{ matrix.node-version }}
+#    - run: npm install
+#    - name: Run eslint
+#      run: npm run lint
+#  coverage:
+#    needs: [test-node]
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 10
+#    services:
+#      mongodb:
+#        image: mongo:4.2
+#        ports:
+#          - 27017:27017
+#    strategy:
+#      matrix:
+#        node-version: [14.x]
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Use Node.js ${{ matrix.node-version }}
+#      uses: actions/setup-node@v1
+#      with:
+#        node-version: ${{ matrix.node-version }}
+#    - run: |
+#        cd test
+#        npm install
+#    - name: Generate coverage report
+#      run: |
+#        cd test
+#        npm run coverage-ci
+#    - name: Upload coverage to Codecov
+#      uses: codecov/codecov-action@v1
+#      with:
+#        file: ./test/coverage/lcov.info
+#        fail_ci_if_error: true
